# ChangeLog for dev-python/oslo-config
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/oslo-config/ChangeLog,v 1.8 2014/08/01 05:23:26 prometheanfire Exp $

*oslo-config-1.3.0 (01 Aug 2014)

  01 Aug 2014; Matthew Thode <prometheanfire@gentoo.org>
  +oslo-config-1.3.0.ebuild, -oslo-config-1.1.0.ebuild,
  -oslo-config-1.1.1.ebuild, -oslo-config-1.2.0.ebuild,
  -oslo-config-1.2.1.ebuild:
  bup

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> oslo-config-1.1.0.ebuild,
  oslo-config-1.1.1.ebuild, oslo-config-1.2.0.ebuild, oslo-config-1.2.1.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> oslo-config-1.2.1.ebuild:
  Keyword ~amd64-linux ~x86-linux

  11 Nov 2013; Matthew Thode <prometheanfire@gentoo.org>
  oslo-config-1.2.1.ebuild:
  fix missing pbr dep

*oslo-config-1.2.1 (11 Nov 2013)

  11 Nov 2013; Matthew Thode <prometheanfire@gentoo.org>
  +oslo-config-1.2.1.ebuild:
  update of oslo.config for gbug 490836

*oslo-config-1.2.0 (26 Sep 2013)

  26 Sep 2013; Matthew Thode <prometheanfire@gentoo.org>
  +oslo-config-1.2.0.ebuild:
  update of olso-config to 1.2.0

*oslo-config-1.1.1 (28 Jul 2013)

  28 Jul 2013; Ian Delaney <idella4@gentoo.org> +oslo-config-1.1.1.ebuild:
  bump; add deps for tests, test phase

*oslo-config-1.1.0 (10 Apr 2013)

  10 Apr 2013; Matthew Thode <prometheanfire@gentoo.org> +metadata.xml,
  +oslo-config-1.1.0.ebuild:
  initial add of oslo.config (as oslo-config) for sys-auth/keystone-2013.1