@@ -2,23 +2,25 @@
 Hash: SHA256
 
 DIST oslo.config-1.3.0.tar.gz 49529 SHA256 1fa44f663f7109ccc3ddd393fbc5a7a077208e116f94e41ada7fbd977f27cbab SHA512 f596cf21e31b78bfe031d74db6720179d5092370dab87ad735605880ac2fd5d8f13b5aac06b4cdc0e1630343fbb90076151282e17916cbf1c020811a71f23583 WHIRLPOOL 5d108815e633d229895b4b8385e8b2d10ebbbeeb5eccd218a532dce93b4c77a651870aae2eae01fada9fd63fcfc09805f9bc5c8ee3794f20b369a4af31d60162
+DIST oslo.config-1.4.0.tar.gz 66544 SHA256 739e76e0a83ec585a3c0415140d9e6ba1b14c7f207e33643e8af7eb4346ffe07 SHA512 cbb9ebe2fd5daa6c78abe0a2169ed3e102f30d6118e53be34257356b218612d5905ecdada28527e8f8820385ef4a404b500ecbe95b01a9f00309271d0f869bc0 WHIRLPOOL fa756561a75c5aec8cc9d7784de2b5d8fc64ef3b86c979dd022d7ffed5f5ef02e261f8450d8818753b69710fb2096b136ef6a8571c2a9259193a27aa8c5343f4
 EBUILD oslo-config-1.3.0.ebuild 1617 SHA256 b73bbc15e100c6e0c0183436c5e38e7bb0443d7db97ed87e5fc0fdfd3b2a63a3 SHA512 87a9a6dc6ae8f8cb467bd9aeb0af1a959f4b2fd0d199672b84ee178cd77bc56a5253abc6b8a1fbb6f41778da5a44a0edc8ffdf0899ca56da2f42fb349cdd6c3d WHIRLPOOL e15e41a885d3bc6703f3ea129ca9ab0da60ff212b016b80a5ad2a530f740663ad71d0fce3efdf26a4f17e17a3f7123e7365ebfbf78ee3b6afc1c72a65bf20259
-MISC ChangeLog 1665 SHA256 3666da3624bcb45160f29b04bc092e584602a663337b957bbcf71122ffd604b5 SHA512 16de9549d6c082ccfab85a23a2e5696baff9009e2c85fc30de07e3c0f6e70a68ead5d34429a71ac51acbf1c0f887504353e17f21b28c48e3a3daf1586dbaee79 WHIRLPOOL bba9bc1b40d25b48faff01e0b26468da00bf30fa7804bbb7ea43e6b5eb07b58b758b453818de43b561301422376d765dfe815744db4a2513dd0f528049ebaed7
+EBUILD oslo-config-1.4.0.ebuild 1769 SHA256 101fc29d7ae0a35b0a9855b494ad5b1a4d941399a208756acbb3c0e005f45651 SHA512 721624468e408ecdab1ffffd639337feea6ec66a11f9466849d8e71d498bfcc96013c841f1838b0b79ac23b93a96d755877be1401d6476698383a48953044ca6 WHIRLPOOL ff88576e48bf88c6d90746d17875d778ad21cabc714504a129e66a2f5b137907f7512abed6d5c00cbef0c58b854c890e3462663b1f15b0289520ad426f071b60
+MISC ChangeLog 1792 SHA256 7f0c39149a6160358f196d2363610a28ed425e509d8647d539ac4a4e0af490d9 SHA512 2949a643a402497f6a8801d643d6ed03627c5313f09d479a7b5e72ce3d7753f5438d538d94cce95e746207188c3ad5ae66b5cc9452e959cc6690e9b3bb2f3e8a WHIRLPOOL 46865684baa8b0ce73f217409f79f568a7147879e3c1fcd7d0b072ee66259984baaa0f716053c34c9154572c329b4650e475399445ef0393af5be7f5b70978f1
 MISC metadata.xml 444 SHA256 d99f4e799440aa12576413da38a9929a05f26eceeedce6b6f610cf632fe7cabd SHA512 92af785f60092d5bf37658db281a68c6ac03959fa851106bdbd2d714d8a72b50ebe71d9fe1245b662d9b272948842956d1dddaad9913c92952b7597531783fde WHIRLPOOL 0604887a5e0880420d9c5c2ad2f584401683990ea81eca35f2a140c79a5820f1a3c80085b4a75aa95b679ea9582755ba713b1fa4819b99fd62efe0e9e6bc66ce
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT2yRtAAoJECRx6z5ArFrDMsEP/2dFj445SffHYe9lV+ep+8J/
-xZpi3rDDe/4jxG0YV0m9Nba8tPHT/sIYgNhIQsk6aAG4uYKeZT26+gnZxbXuuTjn
-Qk7/T/+x06TehN1wJaMPkag6WyFhu6wOfScrcpzhQD7nvqC5IjJ0EoEvUrOrnal6
-Fdt4/WV1D/QLr8znShhhqATXpPV4kyq0OfWXqCDhApZGwumIhZX/tSVBYso25VUu
-azhLYEIWkFNXPXl1PkQLhyqdGLuTPHLNW9KcipLAScoNIx5g5dQ5ypiiChUZU8zi
-3ky4tB1oSbBFRuNJ5UGRKvVQ2vljdBl+5XrlLiEhS4nK4xCFD4sri5tyxFjj2BMW
-y6j2exT4Gfyb6adxGEGkofjV6ghUbs0EnLJ+CBF76kciVm3+G16ikvM/f5yAyJE6
-/AlP87hhg+cH22Y4Xd/L6v70FGSpB7+GVJIUz4erJc9rtiVOUOJGgdwzPilLpJkn
-r7DcRrqb+DUtkH5fj0tcywdZ3hmwNHxu4RKDt4ffJF5wSx+sshEUHnzxqXnEqW/u
-mpIVBaBpxntUIs4YvKpoZtaNiGA1lIm06ReR5OJrw67kbNkjtrjx12a2/6vng9dQ
-YxxVyRNtatqBr1Fr6J96NyIbztBNzNWtO2RG/ac1Ud7ZX8aiN2zg6dOlB02ChTZd
-h58PPQApYedp2x7D3IRU
-=+i4T
+iQIcBAEBCAAGBQJUIJQlAAoJECRx6z5ArFrDgggQAMSBsmxiE2rMYD6Cb0HXlhlp
+4xcWm7A4Lk230XEHurFQ0gI+8P2rWBvmiERPKATAxJZyMKU1dpl6eOUkin/aLb6C
+fAaePBpx/OR13Ea/24MnJLtB6yBtsO/lRaAOXNRYBYLbfbkyrBcDwhOshDcPY0pE
+gredgg8BJs8TKcgThyPxKpg9OqI82Ql8/iuWbN7ARMx9suHLsKTiZD6Q4OgCz8BL
+htaLw07A7PNUy30kdVxkws5lk+PLTR1Njl6LsRYeCxKisNjyLKCMBbOUQ8kwTtl7
+C7lz5jr9toKV5CC/tFgGaAkz4zHrzqNRVF9J9vDgfcSXzzz/uswgEHQN1LKjZOjJ
+J2zok0RL2ey6PnmjxYQpMH22ukA0fUVETrd71/GJbsPissN2JMshRuaZUCd9v1Y5
+420sB90849vg8TBToUjL/F5UsIINLc3uoYQnOagCOv9hjjWN111wVMxLH1r9u6+I
+o2nMA48k1Ju603/EXvsWJWz4OAQmCDgDsT7A6c5+u44QtfGMVwN4/RsRbm18V/xI
+VRUbsVbrJLbQmKKp8zdvBaYUmi9DK3yZL4B2ZFzYWNJJPT7NwzSOiZ5gihO/mFtN
+1kjP0a14AG/O94/dMsMy4dsaTEB9uszBWL7vEH2PQCRtPVHW0sUN43OUWywlULej
+RWHGwpwjAB9jAGWGPX/K
+=tAPg
 -----END PGP SIGNATURE-----
