@@ -2,13 +2,25 @@
 Hash: SHA256
 
 DIST oslosphinx-2.1.0.tar.gz 19973 SHA256 2600f13bc1bd90c81217f0a1d3bea660781b23cbe6135d1c9cc5c0150860fdd5 SHA512 799e358a32cefd08d537c4471ebf84076a19f9c9d292444d7fb706aefbceac9b1cf3368551ef5fb70bb08225a3a7c283c5302e45e8c8d1302c94a827dbbfa2e3 WHIRLPOOL 9904e89dad9f16d6cf88a5cc7dd9e6626a260381a44d7ce54d3929a9ece28e9c17add72ad68c7e53f847b373c4e90b5110bf6c8d2fb4536ee5da43641f3828cf
+DIST oslosphinx-2.2.0.tar.gz 21094 SHA256 a0f650b9c79c333a4fbd51ebeab7c6f5f957c400c13f5b89a936afbc16de8874 SHA512 d8efc5c1852dd195ff5a13847674093915eb1fcaed94bd46ec50667888b851786f362340182e507cbecabbb4155ed456af4f4611c689db67738613c409bc0473 WHIRLPOOL 5e48bcac16123041f6ca9d5e2eaca329af10729a995ff8ad1db6bd01acf926891a4162515940a7984a6cca872fc80c9063ab721ccf76991eec91888f3b8d60b6
 EBUILD oslo-sphinx-2.1.0.ebuild 934 SHA256 6013d4fd1618e83c08eb1e945416c7db3a015bf4bc091f01e7512b4ba9fd4880 SHA512 deee7106741832733a44b3ef64b1a76497484cc4f9ecd655033b5d5e0d3cec8fe56fbd4ce394c2d865d6c23a89a77b79d52c9a1dd53a42b8409d36de25a2a528 WHIRLPOOL 2280c0306b7c8f7edaf533e8be162773d6a3e7faca5dfa3eeb32cf44a7ef745144f0e9c4193bf0b377c9eb115a2a433db20c3659ff5949efa7330a25a03cbe7e
-MISC ChangeLog 1051 SHA256 65d227ede58b84f5432f14e1b6c3db1937d816f54953f9ba058604fe4999e0d1 SHA512 c953b55bf1316c05d3324cb3e00cbcffe99b27d8a67cbf265cb520f5019a2f540f84aaa1f64a3c16910519c28adcadd61afde6e25eb846943cf7f7f4fad85f4c WHIRLPOOL edd0e1011366efd1bd7fd2b2940cedbc8d2f58b1a8af441d29850fd980dcd864f1eb6064a2c743fe1b25a51459b3fb399644418bfdff13870ddfc638649183de
+EBUILD oslo-sphinx-2.2.0.ebuild 943 SHA256 64e890b939cf411fdd09b5876a14fe7ce9696eaf8f234c0111cc41db439df3dc SHA512 279d162f5c2cd42d344612d8e24cda0e1e09ee1e60356f30cde9f0093886150b60c08c577eaa24d5b64e4eb2287a621d04aa6b77a3af6cf78167af75ad3dc472 WHIRLPOOL bea1f94c81c8ff49938ec1542ded396e4610a7d27a6112050a1962150130ab4e0e5671983f088a438b67223f71afe071fc98892bdbf77bb5a9e26c6003dc601f
+MISC ChangeLog 1186 SHA256 e0b70a4a335e72f72e364506753f430860436585ec393cf93229cbb2248fa4c7 SHA512 9f7623fde07d028b24c2498062a7a3762b768043a0600aea58a8eda805e8ad8f8ecb00da9034cde2def08dc14c2eddc79da2fcd1ade9e9b0611c386849f67927 WHIRLPOOL 310be58d9823e09b9bec6ce443940d59c611dc08f8880d2f2675d426cf540da0fbd7740a12cf0b2e9552a9710612391d733faff6974e3f334b40af5e2f39b4cf
 MISC metadata.xml 408 SHA256 387e33df3ded1c9730fbaa3b285a5429d805947a12e51f80ddc5229a5b2f7a16 SHA512 06a604a98182e63c70a2907abe7f60ca6d1c56d68caf7bc9bc9d79d870fc5a8ae72c1874c7052fcb4f1eab120e14af8d9dbb7ee130c027c34cef94ad5881c76f WHIRLPOOL f397d5418adabf462b174f1de68a6f27b858a2007548616bcd71e43bf9c8c436d57ad065f59ff38eaed24f9ea492730db583f5ccf27256cbb56dd7db7097a3ce
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn4NkACgkQcaHudmEf86oJOgCePSQWu+6ThMR1cjK0DimlrlQc
-slMAn236D/QolG2a8sCklwAkqk1rJOqU
-=AFtm
+iQIcBAEBCAAGBQJUIJOVAAoJECRx6z5ArFrDEAcQAMoEkq+66cXtLqYHde06nLxN
+nTnDR1zmiXGUAdW7RiMrEffSS8juGkrkZgmNvzmAehlc3OTloX4FgSRfRogNQEtp
+Zh3kTbotaNHMZvNbBDhTG+KHujlSWQ++g6BjEVId7GnnEDogesRNp7BphSarVgVo
+Xk7ZmwDeERndiDoc9pztsp5hYVCJNP8jWHqckLdyzM6hA3S4vCOoBHFtd6V5AfO+
+eit01fN+b4Vl0E4mSJXBEfhxF9lh2BpoQkOuOW+FU9fMBMjvgTk/RjShSvT+vFB9
+bi7sDY2qL7BEUo3QiA2vC4Anpj9azaNQmAT754ERg9d7tRok865Q/aNT8LGQxt4S
+K/rR9BzNiz1KWZO3Dl6ZpLfXVMh+RySlZZXvMU8iSS7hhjtlZGPYWseBpI4sSrqV
+9uNz3RBpEp6FCUPeVxLPc5x8gaObZGbAufDM5c+zOI0OCK8o/61vpvo7g/TSsKT3
+Ka/xPMshbLhCg3x2Ca9yB+6GL0zirVS+6i2VP4PYjkW5EfHgiaNGtwiYcyFgrQpC
+a7mFI4Na37eoyhlQKVdkbuZBw61xFAJTa49BoPzidHpFM2g2kPWsrRaNjMV5yAcO
+4kCxBHjeq1XWSz1t3zFHVwJNPQRMdFrYwo5DVlpSKIa2Y7gviPWfz4Af+2oqU9g+
+0ecyBqTdiDmLghXzIANn
+=RRGt
 -----END PGP SIGNATURE-----
