@@ -2,23 +2,25 @@
 Hash: SHA256
 
 DIST oslotest-1.0.0.tar.gz 12941 SHA256 cf05f4ff0cbf84ad0b5d1bef7c46d719eaf4408107e65a32a4500cf707d1a1e7 SHA512 79905da41eaf607c589686bcc413c1db900639b5b15687cb7640ebd844a94d0ae51f50864dac3f5004ae443f4dc53bb7b08c37007986ba3b86d5b1fcb6a3b962 WHIRLPOOL 5a762cc543fdcd2afcd8cd1fbeb4017fa4f7b305143f6b270d6f1e35f2e0693fad4484b85a3db75520e3c294bd575864b5afdb31d10065add30315df0215a305
+DIST oslotest-1.1.0.tar.gz 16048 SHA256 29b2380041f4f7632ed3368ac537beb2be869db44104d92c69f7a945a8253d9f SHA512 db52b0ed80ef0e6233d608b5d2c543d3a48a572a1df08e66da755a7ed0d73f03b298df3e35b747fe6659ea68cdfd801a3cd547beac0fec00c3e9128780898bed WHIRLPOOL fe3c2fa128c2b63bf363a47b1d5552230746bc8f7e5cf58f146b8db62882978ba8b103bcaed4ebe5885e365c85b30b57ea4e3103c845c25c2634d80559d95e91
 EBUILD oslotest-1.0.0.ebuild 1445 SHA256 ed86434010124283f12f36220fb4aad0fcd6ab32be9dea3e06d91f466b45463b SHA512 212e21e18a613cae487318eac8744a8f030e63bd1864e7c674962656d6f0e805ff170f41eeb4c9e070e93b42f1b06df5fd3ec609b8ce3e21409fd764177db400 WHIRLPOOL b075705734729caa2e6327d0f5fda7a724fc79e3e02ba02a4469aea499d9dee092435dc748ea3cc0744ae14a80a605018b1a7dda9e044263cd55b8b18bb37d10
-MISC ChangeLog 377 SHA256 80100cad909f92bd907372126adce3df4f9001324cec4649baeec8d6a76a12f0 SHA512 4729ccb0d7e9d0d0b6ce47341b37379517fd4d9d2fa2c5ef977591de09bc7c5c7a8ce87b8e1fba39a6c4ab3bff99eb75ff17285d22a0fd5e2c520caa809f4ad1 WHIRLPOOL 3e5542aeb3889bf6f310b1447da0b4ae56d4c018db4164600d56514b69d2b6dc9e96081c7564561c2d72b7380e40b486b82514ff1ab12412926edb2fea3b8756
+EBUILD oslotest-1.1.0.ebuild 1545 SHA256 6249740d73e6c6e5f51ce93985ec8d75ec2a06cdf58d85e9fcf47597314c011f SHA512 31e5e55299cf818abbf7a54dc108e6c24edd7486ec9fe89caae21ce03409ad8771bed7b75c4e1a15c1c807d0ef992f06f0cd18b884d43e14758891393b0b5565 WHIRLPOOL e5abd4a73b3ade9f5b1b7011046fed621a665c581e3c5f52d1a2534b1596d6e726cb3585f627ad0b8e8129608f1ec76c1a591b7f8553eeb3e1fae562a605d692
+MISC ChangeLog 496 SHA256 1d69eec8888183537ce5c1855703d15823225a2c1373e75a8de477bc16a55024 SHA512 5a5572f98a2540275e906fa9cef37a92332c66278cca0368b66145dc62010985e7bd2bbeee3c646c576231905db3bb7382643b395b1398e803f4dcbf295106e7 WHIRLPOOL e818b8f497f64a8bb3fccf08cdc7d48497fa2861f83802bab1805dd6a6c05f7713ab6d6ed51342fc671aea54aad9a24112ee3ae97056c7ac68235f63c435aed4
 MISC metadata.xml 519 SHA256 b000309e6d9dac8e553b21932dedbcb76da2061b04d0d798bd7547c4c8dbd24a SHA512 4d237651e14e6e9b00781b83f9f11aa19e23ffe4fe3230c948d009a7b733fc901e0cd5729c2b241f380b4328cb6839d5d8a1ba7a42f8c075bdab94002c42a898 WHIRLPOOL 97ff487f44f4730bb2378ef67e5a611dbeb5d0de3e0142b376fb191868762398e7ad03c0a2969ed72d799ad20d650d2191a473d981df6ec138460ea8e4a3bd6f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT2yQNAAoJECRx6z5ArFrDq/gP/jwJ7LwslAb5lYiMcWm2hB3q
-b9xWqxkHY6tyOPDFu8itISUIB2BbvIUyubK4X3ZjawoX4hsuEqPAGG8pe4gZsK0Z
-S8E1mKgxnGWgMAkxgbWUrWQLAYfSkX/42oX2XXsPYAsBMCJ7e/1E16dYpCLVyXoy
-zZGmSUziMKPszvNRGNLzHc32A8Jt3PBYiuzPCFnrD9B6rLO/dLx+iiW2sO371/JF
-1Jw9rqrbjz8HEs/aPjMq8kvSQ3Ocu60g131ngb5y9lN2NCnfNdqcv/A7OVWRyZtm
-6OIwKhNLXJrQElHQWepRuhuwqUK18FuBPia26zmmYoD5V9XXHnzMgqzCggH21xUu
-V5ttlh0f0H/YJp1ZoWWyAARZhbbeax20ewMErryY0pcYQrz2t5BIyUjzEkCChN58
-baAD2dbv9/CmOocAMtC8H4o4Gjbd3dBP9IQNRGvhIUAHTfitQX2Lui3f+muVS5dg
-QxHAPxHs+7p7QaNPz/nyfFz80zieGHSl8f9hQv50c9Q2piomVNGMOO89xeMu/AyJ
-aqUXxxCNfUdiIvJc/wtsDvL1s9QwKYHUmsU+SdFR+PRQgPinUXIN1QWh1QzfZ8ts
-rRlLIUx8ZVLKXhcS6YSfjEWyCwgAjWsPrnvpRP/RSa0B9Zr7gnY5Hr0b+czrFy/x
-iCejgdf6XSl5fE1BTi1C
-=LFiY
+iQIcBAEBCAAGBQJUIJPzAAoJECRx6z5ArFrDFaAQALBYvu+TWy82sxAyAiieJJ0z
+6NwxknwYMloxN7W4aHJt9kYrKJMNrcQ4pN3MtQt33jE0SDKhbfT3hIb9COxnftvU
+Wf1fzWlhoukmTUPGZBekU4Af2BJyvOOwZG+qFqaQa9J4S5qj7lTjOiJkByjZPXh7
+peg5QdptH99WolkrAlmMXmKVzrRpBUdfTUs60yntGBKB9wE4OZOSOvQPPCNhS+MV
+Gerqz0tTse6q+xv0WTZW/MuS3TLyFJp9DcKGkPDHH0u4X+v0bgC2983PoXBKFJLR
+nwMc/gnh+J7wOjkT8o9c8sZT0oBX+bb4OS7LsIuLfqJNwuyP+7BK9Vr4apkR12y/
+0hFy6X91CIestBWILmfF/uVBZ3u0KGYsV0wjrjseC3C/BMgHt3RrScMpHX2P1Mkt
+WA37cv+14I9qovwYPQAJkBJyvioGZJIE1l2EulucU0IKPQ7GEEcXO2B31LuW8NDQ
+WsWo7Q/0x/D1VCexzOFWf92pOGTe8MBtJA7D2d+AE5HKumfpu5JFWpKQbGCUJuOF
+xIx0Q4UvRBLvyMVEOVf1szgMflWo4x7ZB4BPFYnoxe6WAXP6M999z/b8tnM/HXmn
+lOu09v7P4zEqlT9b8jRrDcA+q/zLCBlejXzxQeWDdgxlwIr0XijIevA6e+XAkx+I
+pDKvRgj+Ro/46mbwKdkc
+=6vOu
 -----END PGP SIGNATURE-----
