@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/oslo-sphinx
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/oslo-sphinx/ChangeLog,v 1.5 2014/08/10 21:15:05 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/oslo-sphinx/ChangeLog,v 1.6 2014/09/22 21:24:06 prometheanfire Exp $
+
+*oslo-sphinx-2.2.0 (22 Sep 2014)
+
+  22 Sep 2014; Matthew Thode <prometheanfire@gentoo.org>
+  +oslo-sphinx-2.2.0.ebuild:
+  bup
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> oslo-sphinx-2.1.0.ebuild:
   QA: drop trailing '.' from DESCRIPTION
