@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/oslo-config
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/oslo-config/ChangeLog,v 1.8 2014/08/01 05:23:26 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/oslo-config/ChangeLog,v 1.9 2014/09/22 21:26:28 prometheanfire Exp $
+
+*oslo-config-1.4.0 (22 Sep 2014)
+
+  22 Sep 2014; Matthew Thode <prometheanfire@gentoo.org>
+  +oslo-config-1.4.0.ebuild:
+  bup
 
 *oslo-config-1.3.0 (01 Aug 2014)
 
